Changes to gitignore and Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 *.pyc
-src/espro/.theos
-src/esplios/.theos
+**/.theos
 .keys
 .theos
 downloads
 .DS_Store
 src/esplmacos/build/
+src/*/build
+src/*/packages
 src/esplios/packages/
 DerivedData/
-src/*/build/
 *.pbxuser
 *.mode1v3
 *.mode2v3
@@ -19,8 +19,10 @@ src/*/build/
 !default.perspectivev3
 xcuserdata
 !xcshareddata
-*.deb
+**/*.deb
 .cydia-package
 resources/esplios
 resources/esplmacos
 .vscode
+resources/esplios
+resources/esplmacos
